--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello 12334 !!!
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8">
+    <title>ZUIComponent</title>
+</head>
+<body>
+    <div id="root"></div>
+</body>
+</html>
