--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="utf-8">
     <title>ZUIComponent</title>
+    <script type="text/javascript" src="core/ZUI-v0.0.1.js"></script>
 </head>
 <body>
     <div id="root"></div>
+    <!--<script type="text/javascript" src="src/control.js"></script>-->
 </body>
 </html>
