js2uix-zui - develop basic functions. version modify

--- a/index.html
+++ b/index.html
@@ -3,26 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>ZUIComponent</title>
-    <script type="text/javascript" src="core/js2uix-v0.0.1.js"></script>
-    <!--<script type="text/javascript" src="core/js2uix-v0.0.1.min.js"></script>-->
+    <script type="text/javascript" src="core/js2uix-v1.0.1.min.js"></script>
 </head>
 <body>
-    <div id="root">
-
-        <div class="tttt">123</div>
-
-        <div class="apa1">apa1</div>
-        <div class="apa2" id="rr">apa2</div>
-        <div>2</div>
-        <div>3</div>
-        <div>4</div>
-        <div class="testWrap">
-            <div class="test1">
-                <span>1</span>
-                <span class="test">hahaha</span>
-            </div>
-        </div>
-    </div>
-    <script type="text/javascript" src="src/control.js"></script>
+    <div id="root"></div>
 </body>
 </html>
