--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>ZUIComponent</title>
-    <script type="text/javascript" src="core/js2uix-v1.0.1.min.js"></script>
+    <title>js2uix</title>
+    <link rel="stylesheet" href="core/js2uix-v1.0.1.css" type="text/css">
+    <script type="text/javascript" src="core/js2uix-v1.0.1.js"></script>
 </head>
 <body>
     <div id="root"></div>
