--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="utf-8">
     <title>js2uix</title>
-    <link rel="stylesheet" href="core/js2uix-v1.0.1.css" type="text/css">
+    <link type="text/css" rel="stylesheet" href="core/js2uix-v1.0.1.css">
     <script type="text/javascript" src="core/js2uix-v1.0.1.js"></script>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <!-- root -->
+    </div>
 </body>
 </html>
